# fvrs

./: .gitignore  Cargo.toml  README.md  SUPPORTED_FORMATS.md
crates/fvrs-cli/: Cargo.toml
crates/fvrs-cli/src/: main.rs
crates/fvrs-core/: Cargo.toml
crates/fvrs-core/src/: lib.rs
crates/fvrs-core/src/core/: mod.rs
crates/fvrs-gui-egui/: Cargo.toml
crates/fvrs-gui-egui/src/: app.rs  archive.rs  file_info.rs  file_ops.rs  lib.rs  main.rs  preview.rs  state.rs  utils.rs
crates/fvrs-gui-egui/src/ui/: dialogs.rs  explorer_tree.rs  file_info_dialog.rs  file_list.rs  file_viewer.rs  main.rs  mod.rs  shortcuts.rs
crates/fvrs-gui-nwg/: Cargo.toml
crates/fvrs-gui-nwg/src/: clipboard.rs  drag_drop.rs  filter.rs  lib.rs  main.rs  menu.rs  plugin_dialog.rs  plugin_manager.rs  search.rs
crates/fvrs-gui-slint/: Cargo.toml
crates/fvrs-gui-slint/src/: main.rs
crates/fvrs-gui-slint/ui/: main.slint
crates/fvrs-plugin-api/: Cargo.toml
crates/fvrs-plugin-api/src/: lib.rs
crates/fvrs-plugins/: Cargo.toml
crates/fvrs-shell/: Cargo.toml
