[workspace]
resolver = "2"
members = [
    "crates/fvrs-core",
    "crates/fvrs-cli",
    "crates/fvrs-gui-egui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FVRS Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/fvrs/fvrs"
homepage = "https://github.com/fvrs/fvrs"
description = "File Version and Restore System - A powerful file management tool"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
windows = { version = "0.52", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_Storage", "Win32_Storage_FileSystem"] }
slint = "1.3"
libloading = "0.8"
fluent-bundle = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] } 