[package]
name = "fvrs-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "fvrs"
path = "src/main.rs"

[dependencies]
fvrs-core = { path = "../fvrs-core" }
tokio = { version = "1.36", features = ["full"] } 