[package]
name = "fvrs-core"
version = "0.1.0"
edition = "2021"
authors = ["FVRS Team"]
license = "MIT OR Apache-2.0"
description = "Core file system operations and async runtime for FVRS"

[dependencies]
tokio = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
windows = { workspace = true, features = ["Win32_Storage", "Win32_Storage_FileSystem"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
notify = "6.1"
regex = "1.9"
# zip = { version = "0.6.5", features = ["aes-crypto"] }
flate2 = "1.0"
tar = "0.4"
xz2 = "0.1"
# bzip2 = "0.4"
sha2 = "0.10"
md5 = "0.7"
blake3 = "1.5"
ripemd = "0.1"
sha1 = "0.10"
hex = "0.4"
glob = "0.3"
base64 = "0.21"
aes = "0.8"
cipher = "0.4" 