[package]
name = "fvrs-gui-egui"
version = "0.1.0"
edition = "2024"
authors = ["FVRS Team"]
license = "MIT OR Apache-2.0"
description = "Modern GUI for FVRS using egui/eframe"

[[bin]]
name = "fvrs-gui"
path = "src/main.rs"

[dependencies]
fvrs-core = { path = "../fvrs-core" }
eframe = { version = "0.31", default-features = false, features = [
    "default_fonts", 
    "glow",
    "wayland",
] }
egui = "0.31"
egui_extras = { version = "0.31.1", features = ["default", "file"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.14"
open = "5.0"
tracing = "0.1"
tracing-subscriber = "0.3"
arboard = "3.5"
notify = "6.1"

# 圧縮ファイル処理
zip = "2.1"
delharc = "0.6"
tar = "0.4"
flate2 = "1.0"
sevenz-rust = "0.6"

[features]
default = ["clipboard"]
clipboard = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_System_SystemInformation",
] } 