[package]
name = "fvrs-gui-nwg"
version = "0.1.0"
edition = "2021"
authors = ["FVRS Team"]
license = "MIT OR Apache-2.0"
description = "Native Windows GUI for FVRS using native-windows-gui"

[dependencies]
fvrs-core = { path = "../fvrs-core" }
fvrs-plugin-api = { path = "../fvrs-plugin-api" }
native-windows-gui = "1.0.10"
native-windows-derive = "1.0.5"
tokio = { workspace = true }
thiserror = "1.0"
anyhow = { workspace = true }
windows = { workspace = true }
image = "0.24"
walkdir = "2.3"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8"
notify = "6.1" 