[package]
name = "fvrs-gui-nwg"
version = "0.1.0"
edition = "2021"
authors = ["FVRS Team"]
license = "MIT OR Apache-2.0"
description = "Native Windows GUI for FVRS using native-windows-gui"

[[bin]]
name = "fvrs-gui"
path = "src/main.rs"

[dependencies]
fvrs-core = { path = "../fvrs-core" }
native-windows-gui = "1.0"
native-windows-derive = "1.0"

[features]
default = [] 